[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://WhiteColour.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.4374
height = 0.569637

[sub_resource type="CircleShape2D" id=3]
radius = 8.81245

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Stop"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.59099 )
shape = SubResource( 2 )

[node name="Gun" type="Position2D" parent="."]
position = Vector2( -0.0365985, -18.776 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -0.03125, 1.65625 )
shape = SubResource( 3 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 4 )
anims/Stop = SubResource( 5 )

[node name="FlyingParticles1" type="CPUParticles2D" parent="."]
position = Vector2( -6.49999, 10.6562 )
emission_shape = 1
emission_sphere_radius = 0.01
linear_accel = -24.73
color = Color( 0.368627, 0.776471, 0.937255, 1 )
hue_variation = 0.04
hue_variation_random = 1.0

[node name="FlyingParticles2" type="CPUParticles2D" parent="."]
position = Vector2( 6.56249, 10.0625 )
emission_shape = 1
emission_sphere_radius = 0.01
linear_accel = -24.73
color = Color( 0.368627, 0.776471, 0.937255, 1 )
hue_variation = 0.04
hue_variation_random = 1.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="invinciblity_ended" from="Hurtbox" to="." method="_on_Hurtbox_invinciblity_ended"]
[connection signal="invinciblity_started" from="Hurtbox" to="." method="_on_Hurtbox_invinciblity_started"]

[editable path="Hurtbox"]
